<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false">

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/trial_mudra_title_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_margin="15dp"
        style="@style/titleTextView"/>

    <Button
        android:id="@+id/start_button"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:elevation="5dp"
        android:text="@string/start_string"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_txt" />

    <ImageView
        android:id="@+id/record_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_record_btn"
        app:layout_constraintStart_toEndOf="@id/start_button"
        app:layout_constraintBottom_toBottomOf="@id/start_button"
        android:layout_margin="15dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:tint="@color/red_color"/>


    <TextView
        android:id="@+id/step_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/start_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:text="@string/sukha_kriya_string"
        style="@style/titleTextView"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <TextView
        android:id="@+id/step_subtitle_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/step_title_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/alternate_nostril_breathing_string"
        android:visibility="gone"
        tools:visibility="visible"/>


    <TextView
        android:id="@+id/time_display_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/timeDisplayTextView"
        app:layout_constraintTop_toBottomOf="@id/step_subtitle_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>

</android.support.constraint.ConstraintLayout>